auto-test/tests/chapter_18/invalid_parse/var_decl_two_struct_kws.c
struct s {
    int a;
};

struct struct s x;  

int main(void) {
    return 0;
}